fixed tooltip position to no break the layout

--- a/src/components/tooltip/tooltip.st.css
+++ b/src/components/tooltip/tooltip.st.css
@@ -13,6 +13,10 @@
     diagonalTailOffset: 10px;
 }
 
+.root {
+    position: absolute;
+}
+
 .innerPortal {
     -st-states: open, onTop, unplaced;
     position: absolute;
